### The Program Manager Eternity What's Up File

2021-08

    Added CPU Idle/power saving option to Config Dialog.
    Added "<none>" option to Config and Display Dialogs for File based options.
    Fix display options only save when theme was changed bug.
    Mouse flicker reduced some.
    Added Config Dialog option to turn sound on/off
    Added config file option to save power, CPU_IDLE=ANY, APM, HALT or NONE
    Added wait on return for individual programs, WAIT=OFF, FOREVER, DEFAULT or seconds.
    Added wait on return default per menu global WAIT=OFF, FOREVER or seconds.
    Assigned Edit Menu popup tp EditItem Command (default Alt+E).
    Changed Edit button mapping from EditFile to EditItem
    Create menu with wildcard character, bug fix.
	Some grammer and spelling corrections.

2015-07-26
 	Fixed non-FreeDOS/DosBox "Path Not Found" compatibility issue.
	Some grammer and spelling corrections.

2015-07-09

	Added Whatsnew.txt (this file)
	QScroll Added Line to separate multiple files when loading more than one.
	QScroll Added command line switch /S- to set smooth scrolling to off.
		(/S and /S+ turn it on which is the default for now);
	QScroll Pressing "S" key toggles smooth scrolling.
	QScroll Exit on mouse click.
	QScroll Scroll by mouse movement.
	Improved compatibility for keyboards without insert lock key.

2015-07-05

	Initial Beta Version. Mostly Functional.
