@@ -43,7 +43,7 @@
 1437956760 1dbff8fbba39c5f781464f0d9b4bcf41d8bd27cbcbdde709d8356af524e51b86fbbc18e0b386f4dcc6c06c7134b1d09cdf511ab071ce9f645f743a01ac7f18aa SOURCE/PGME/ETERNITY/ADDLIC.PAS
 1437956760 0066e3c160af4676dfcc24a2a0b0c370312affa13b86da786d4049492b457a0c6d07a263af67998287d50d419f32dcf847a82cd2957b657b02caa6878dd98ae9 SOURCE/PGME/ETERNITY/BLAHBLAH.TXT
 1437956760 950048d1cfcffa398e1b7af3c500af52b36d8b8cf8fed6fd40dbee443f0b2334ba91b1858e433f13c39968dbda8ebdaa9a40ed1d30c492c17ad49033ec18e534 SOURCE/PGME/ETERNITY/ECACHE.PAS
-1628282294 4f4d13c7c98daca3b7bfaec6b02524a9e78850eeb3bca96935fbc944aac51563ba6d181910d1293f699bf0c62fb0f01da0dafbc1b8faecc972fbc7463bf9d205 SOURCE/PGME/ETERNITY/ECONST.PAS
+1628335934 c2a07ea19aff949809569c2da24571ac8642d69fa9a67702f3486930f9dfdc77679ba899f57b9b5cd9372a993605b3a5491543592df00df33b6f8a4d28fcdc6f SOURCE/PGME/ETERNITY/ECONST.PAS
 1437956760 58f5938606eb3d8ce620a34e9b2706c49dab9890746308c57142458c3ae49eb878852208c473397b6b471b88d5fc3a6248fd1448f87c4e6513cf863ada5afed8 SOURCE/PGME/ETERNITY/EDIALOGS.PAS
 1628100369 bbfec143b3039be0316389c844a1330a7b3dbd9b4ad5b8fa145c8ad67437f4c4eccddb8409ff0c4ae4a417fdc17a2f053e15ed09b84fb88dbe0cb5355c9221ef SOURCE/PGME/ETERNITY/EPGM.PAS
 1628279556 2ce306a5a2de36f4eee27dfd196fd676a43c1593d87398c4eadfc613a435a9788bf13deb89e4e261f7f513c5398a5b82b5db5fead97b03c5b4de7e074b7a9aaa SOURCE/PGME/ETERNITY/ETERNITY.DEF
@@ -71,9 +71,9 @@
 1437956760 61e1198ee3d79b3394750cd91d55b03bfade495a15ff47c8c2983bc9297cd8c70423f58179565e94fa3dfaee3dd482e4e56b165785175f12b178f7b42b40482e SOURCE/PGME/ETERNITY/TDLGPDEL.INC
 1437956760 dd2e1c7fb981c08166603bb6cdad0fe02ffe3a9bb4e9ee9b3de96bec6ba3633e245666912defaff04b2715e82211f2f786ab2c84d2be5e7b6adf10b3b980db35 SOURCE/PGME/ETERNITY/TDLGPEDI.INC
 1628283809 f80d54641b745e6ceef261e178a621e218bbc1cfecf6dd7f25c3f3bd6d1678edd400b90210807ee8fabe060baae6dbcbe323f48ab212c6cbd453e4c8ce7e70be SOURCE/PGME/ETERNITY/TDLGPROG.INC
-1628281054 4f922caa05259249b809abaf6fa1c291cad1d6c50dbad59e8a5d7b0a864a89532bde537b4a97d838cf9a0b8f70e7ad1e44d9c35277c119e43a176d9144552cc0 SOURCE/PGME/ETERNITY/TMENUCAC.INC
-1628282945 9c13af9ed172611220ee29673204c2f331cc9858b5b89a880125f89681d0d389bf4c61c7b44a8cee6bc8b82b3fcf65734dcb3d94775619ac3d4e2de777c1a5c6 SOURCE/PGME/ETERNITY/TPGME.INC
-1628264985 35b9faa13a964f3c707fd76efa817dc3fb4ea8be8ef4ecac06d747c46690e18c2345fa0ed5cb62361f7945d74e60d540181fdc3dba1184b5d268eb5b1c071979 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
+1628348601 1ec36d5fdbf6b4d2901414e770c9ad4b44f09610eedc1d5ae570bfcbecce739abd45832dca7ab392cfd4233bd39882ebfe9a802f173ff51b127c77324d955a5d SOURCE/PGME/ETERNITY/TMENUCAC.INC
+1628336896 df3595e62323095cbe08c0f9699a9e02a14c2fc08c63263200eea74bb1ab49304001883d8e849824f6b7f790b96eeef8b7fa5cd369c447beaf565a34334cb514 SOURCE/PGME/ETERNITY/TPGME.INC
+1628349483 e5747f611414a98ea4969286b8dab77e738d40b596b07c09fd77dc9dbc7b268088505b36bc17a5d63ab53d90d7f1496aff837888321a7e0477af9b1d932cf02f SOURCE/PGME/ETERNITY/WHATSNEW.TXT
 1437956760 5e9d5bebb8de344f2a5e46e7a68a3c8ca8adb4e463f65ead217ff086d54832765ad80fbc400c5392ce5be660f425e0a30bc20ba117c178bc8774c9577d5f8a8c SOURCE/PGME/ETOOLS/EFNTDSGN.PAS
 1437956760 b6eea7f9c41e03cc924dfe169f31162e5b5bf4e52a9810348416a36da73241dbfe5c1257fee1433c2ca307f64e10f5de8f6ebb18da47b7a6a0b1d052ac3c8908 SOURCE/PGME/ETOOLS/ETOOL.PAS
 1628278599 db9038a0485abde0765f0454e665572b7212678860627d25db23cd60bf205cf64fb473fb2cbc75773b9fd6e81d80740c78200e9d33ebe06955d2dfdf8298d0da SOURCE/PGME/ETOOLS/ETOOLS.DEF
@@ -105,7 +105,7 @@
 1437956760 6478cc476a10a376adce1784707677cd0595ae1334f1304de7eb74c62b147d814b2ff7167efc4b2f0cbd040dda8d17f286d379ee2153f800865b27a1d7da06f3 SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1628211945 3878ffaf7d274816159d6739b066367a9356c311d8397c9eafa5770837893844ae9c941eb325df2bbd05e161770d56b2b932b99bab9f1dbca3a3f1e4934b7b12 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1628347502 1b759448ca652b9d086f474eb41389f079348f2983512180bd6ded6acf5833e61a2221eea0ed0d08026f9c6ae1d73625563cada36f875918efe323d48bf89743 SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1628281631 5ebf81825ce016e2ddeae66343ae8c90a4325c6fd8e5a4498b17907654bc8088add7ad216e7899a77482a7690293119d9ad0ef3453ab5d78fc3deccedc734a26 SOURCE/PGME/QUICKCRT/QDOS.PAS
 1437956760 bcb1351d79c02db42e9e557bd345a6cb1dd1b50f4dc15415ec0e1b1686d47629f98c5f9ffd11ae489c8a4372290e0dfac200e88e987a7140450c8cf5cd97308b SOURCE/PGME/QUICKCRT/QERRORS.PAS
@@ -209,14 +209,14 @@
 1437956760 1dbff8fbba39c5f781464f0d9b4bcf41d8bd27cbcbdde709d8356af524e51b86fbbc18e0b386f4dcc6c06c7134b1d09cdf511ab071ce9f645f743a01ac7f18aa SOURCE/PGME/ETERNITY/ADDLIC.PAS
 1437956760 0066e3c160af4676dfcc24a2a0b0c370312affa13b86da786d4049492b457a0c6d07a263af67998287d50d419f32dcf847a82cd2957b657b02caa6878dd98ae9 SOURCE/PGME/ETERNITY/BLAHBLAH.TXT
 1437956760 950048d1cfcffa398e1b7af3c500af52b36d8b8cf8fed6fd40dbee443f0b2334ba91b1858e433f13c39968dbda8ebdaa9a40ed1d30c492c17ad49033ec18e534 SOURCE/PGME/ETERNITY/ECACHE.PAS
-1628282294 4f4d13c7c98daca3b7bfaec6b02524a9e78850eeb3bca96935fbc944aac51563ba6d181910d1293f699bf0c62fb0f01da0dafbc1b8faecc972fbc7463bf9d205 SOURCE/PGME/ETERNITY/ECONST.PAS
+1628335934 c2a07ea19aff949809569c2da24571ac8642d69fa9a67702f3486930f9dfdc77679ba899f57b9b5cd9372a993605b3a5491543592df00df33b6f8a4d28fcdc6f SOURCE/PGME/ETERNITY/ECONST.PAS
 1437956760 58f5938606eb3d8ce620a34e9b2706c49dab9890746308c57142458c3ae49eb878852208c473397b6b471b88d5fc3a6248fd1448f87c4e6513cf863ada5afed8 SOURCE/PGME/ETERNITY/EDIALOGS.PAS
 1628100369 bbfec143b3039be0316389c844a1330a7b3dbd9b4ad5b8fa145c8ad67437f4c4eccddb8409ff0c4ae4a417fdc17a2f053e15ed09b84fb88dbe0cb5355c9221ef SOURCE/PGME/ETERNITY/EPGM.PAS
 1628279556 2ce306a5a2de36f4eee27dfd196fd676a43c1593d87398c4eadfc613a435a9788bf13deb89e4e261f7f513c5398a5b82b5db5fead97b03c5b4de7e074b7a9aaa SOURCE/PGME/ETERNITY/ETERNITY.DEF
 1628087308 2798a080e867c11b9884eac440aff34f955bf2bd9561b3f81b128608f7153eb3bafc491f6f2fb9e42b0aee49b571fdef4856da5bab1b65350127a631819496bf SOURCE/PGME/ETERNITY/ETERNITY.PAS
 1437956760 a393b94f13104008c70bac30f3288f0a9fc989f5326ac8950cee649723cee4c7aeac77dec74fdaab9df3f3b98ebddcd00feadc413722a8c5a75ed18dd46f2875 SOURCE/PGME/ETERNITY/EXESIZE.PAS
 1437956760 4b2619ef06a45fd329503c3ed40e34d8d67d2cdfe03e40d28efb09e3b737495f57c0d243d6fab1626b809354e292e8add2a1861cf5acb222ff2792e3d1781aef SOURCE/PGME/ETERNITY/INSFILE.INC
-1628283580 53ff74bf83db4d0a1c87ca42e6c9442b83bd7d1d14aebbe5edc72c6de869369e1d6bbfc07486df31ab3e8ceed265e7e0464ef500bd156d58b705976d8fae19e9 SOURCE/PGME/ETERNITY/INSTALL.INC
+1628348605 c1de03bd377520abc06ab0e8c1db9617ae0746bafcc4103c457665398d506a7d7d38c352aff12f29edc11179134dfec0b78985d4636df9d64e9cff2bcf3f9107 SOURCE/PGME/ETERNITY/INSTALL.INC
 1627995630 46414c452c915d83ba3dda225c15ec1bcfe7bc44e98d387a178acaf71fc9e4d4855f3f90f73d4985f28e0267956abcf3967e45fdc1ea8d062b9faf1748c30035 SOURCE/PGME/ETERNITY/INSTALL.PAS
 1437956760 e1b298efe4c706ebee933ac2e0351e8e25998a747be21252e5b2cd371db738706d59cc1b3609e63dfb66ff766844506678766610d40cafa4c541bd1b72dec20d SOURCE/PGME/ETERNITY/INSTALL.PRE
 1437956760 cef0fa20dc6ddeca073b952ab0d7cfca93e7ff7b55f426c8d7135030540b2b18e234b217c4955349dbdbbcca0b74fc839571dd70e16bcdd2920b183a0d002cba SOURCE/PGME/ETERNITY/LICENSE.INC
@@ -239,9 +239,9 @@
 1437956760 61e1198ee3d79b3394750cd91d55b03bfade495a15ff47c8c2983bc9297cd8c70423f58179565e94fa3dfaee3dd482e4e56b165785175f12b178f7b42b40482e SOURCE/PGME/ETERNITY/TDLGPDEL.INC
 1437956760 dd2e1c7fb981c08166603bb6cdad0fe02ffe3a9bb4e9ee9b3de96bec6ba3633e245666912defaff04b2715e82211f2f786ab2c84d2be5e7b6adf10b3b980db35 SOURCE/PGME/ETERNITY/TDLGPEDI.INC
 1628283809 f80d54641b745e6ceef261e178a621e218bbc1cfecf6dd7f25c3f3bd6d1678edd400b90210807ee8fabe060baae6dbcbe323f48ab212c6cbd453e4c8ce7e70be SOURCE/PGME/ETERNITY/TDLGPROG.INC
-1628281054 4f922caa05259249b809abaf6fa1c291cad1d6c50dbad59e8a5d7b0a864a89532bde537b4a97d838cf9a0b8f70e7ad1e44d9c35277c119e43a176d9144552cc0 SOURCE/PGME/ETERNITY/TMENUCAC.INC
-1628282945 9c13af9ed172611220ee29673204c2f331cc9858b5b89a880125f89681d0d389bf4c61c7b44a8cee6bc8b82b3fcf65734dcb3d94775619ac3d4e2de777c1a5c6 SOURCE/PGME/ETERNITY/TPGME.INC
-1628264985 35b9faa13a964f3c707fd76efa817dc3fb4ea8be8ef4ecac06d747c46690e18c2345fa0ed5cb62361f7945d74e60d540181fdc3dba1184b5d268eb5b1c071979 SOURCE/PGME/ETERNITY/WHATSNEW.TXT
+1628348601 1ec36d5fdbf6b4d2901414e770c9ad4b44f09610eedc1d5ae570bfcbecce739abd45832dca7ab392cfd4233bd39882ebfe9a802f173ff51b127c77324d955a5d SOURCE/PGME/ETERNITY/TMENUCAC.INC
+1628336896 df3595e62323095cbe08c0f9699a9e02a14c2fc08c63263200eea74bb1ab49304001883d8e849824f6b7f790b96eeef8b7fa5cd369c447beaf565a34334cb514 SOURCE/PGME/ETERNITY/TPGME.INC
+1628349483 e5747f611414a98ea4969286b8dab77e738d40b596b07c09fd77dc9dbc7b268088505b36bc17a5d63ab53d90d7f1496aff837888321a7e0477af9b1d932cf02f SOURCE/PGME/ETERNITY/WHATSNEW.TXT
 1437956760 5e9d5bebb8de344f2a5e46e7a68a3c8ca8adb4e463f65ead217ff086d54832765ad80fbc400c5392ce5be660f425e0a30bc20ba117c178bc8774c9577d5f8a8c SOURCE/PGME/ETOOLS/EFNTDSGN.PAS
 1437956760 b6eea7f9c41e03cc924dfe169f31162e5b5bf4e52a9810348416a36da73241dbfe5c1257fee1433c2ca307f64e10f5de8f6ebb18da47b7a6a0b1d052ac3c8908 SOURCE/PGME/ETOOLS/ETOOL.PAS
 1628278599 db9038a0485abde0765f0454e665572b7212678860627d25db23cd60bf205cf64fb473fb2cbc75773b9fd6e81d80740c78200e9d33ebe06955d2dfdf8298d0da SOURCE/PGME/ETOOLS/ETOOLS.DEF
@@ -273,7 +273,7 @@
 1437956760 6478cc476a10a376adce1784707677cd0595ae1334f1304de7eb74c62b147d814b2ff7167efc4b2f0cbd040dda8d17f286d379ee2153f800865b27a1d7da06f3 SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1628211945 3878ffaf7d274816159d6739b066367a9356c311d8397c9eafa5770837893844ae9c941eb325df2bbd05e161770d56b2b932b99bab9f1dbca3a3f1e4934b7b12 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1628347502 1b759448ca652b9d086f474eb41389f079348f2983512180bd6ded6acf5833e61a2221eea0ed0d08026f9c6ae1d73625563cada36f875918efe323d48bf89743 SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1628281631 5ebf81825ce016e2ddeae66343ae8c90a4325c6fd8e5a4498b17907654bc8088add7ad216e7899a77482a7690293119d9ad0ef3453ab5d78fc3deccedc734a26 SOURCE/PGME/QUICKCRT/QDOS.PAS
 1437956760 bcb1351d79c02db42e9e557bd345a6cb1dd1b50f4dc15415ec0e1b1686d47629f98c5f9ffd11ae489c8a4372290e0dfac200e88e987a7140450c8cf5cd97308b SOURCE/PGME/QUICKCRT/QERRORS.PAS
